--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,12 @@ input::-webkit-inner-spin-button {
     background-color: #CCCCCC30;
 }
 
+.customAlert {
+    background: rgb(255, 223, 223);
+    background: linear-gradient(9deg, rgba(255, 223, 223, 1) 0%, rgba(255, 165, 165, 1) 100%);
+    cursor: default;
+}
+
 @media (max-width: 600px) {
     .wrapper {
         margin: 0;
